@@ -32,6 +32,7 @@ export(BatchJobsAsyncTask)
 export(async)
 export(asyncBatchEvalQ)
 export(asyncEvalQ)
+export(availableCores)
 export(await)
 export(backend)
 export(batchEvalQ)
