@@ -2,6 +2,11 @@ Package: async
 ==============
 
 Version: 0.2.0-9000 [2015-05-19]
+o Any flavor of backend("multicore") is based on availableCores().
+o Added availableCores() for identifying the number of available cores.
+  The default is to acknowledged the assigned number of cores by
+  queing systems such as Torque/PBS, before using detectCores() of
+  the 'parallel' package.
 o CLEANUP: Moved identification of globals to new 'globals' package.
 o CLEANUP: Moved list environments to new 'listenv' package.
 o ROBUSTNESS: Asynchroneous tasks that still run when R exists
